[package]
name = "bpf-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# solana-bpf-loader-program = { path="../../solana-projects/solana/programs/bpf_loader"}
# solana-program-runtime = { path = "../../solana-projects/solana/program-runtime" }
# solana-sdk = { path = "../../solana-projects/solana/sdk" }


solana-bpf-loader-program = { git = "https://github.com/solana-labs/solana", rev="0b9426e734616409f4e2d315eb1990a32a124fbf" }
solana-program-runtime = { git = "https://github.com/solana-labs/solana", rev="0b9426e734616409f4e2d315eb1990a32a124fbf" }
solana-sdk = { git = "https://github.com/solana-labs/solana", rev="0b9426e734616409f4e2d315eb1990a32a124fbf" }

solana_rbpf = "0.2.35"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.87"

